--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "the-super-tiny-compiler",
   "version": "1.0.0",
-  "author": "James Kyle <me@thejameskyle.com> (thejameskyle.com)",
+  "author": "",
   "license": "CC-BY-4.0",
-  "main": "./the-super-tiny-compiler.js"
+  "main": "./the-super-tiny-compiler.js",
+	"type": "module"
 }
